<resources>
    <string name="app_name">TaskBeats</string>
    <string name="home_title">Task Beat</string>
    <string name="title_crate_category">Create category</string>
    <string name="title_crate_task">Create task</string>
    <string name="title_update_task">Update task</string>
    <string name="hint_create_category">Category name: e.g: Work</string>
    <string name="hint_create_task">Task name: e.g: Study Android</string>
    <string name="btn_create">Create</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="title_category_delete">Important</string>
    <string name="description_category_delete">By deleting a category you will delete all tasks with this category, are you sure?</string>
    <string name="title_empty_category">No category found!</string>
    <string name="description_empty_category">Please create a new one</string>
</resources>